--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ doc/*.txt
 
 #doc 폴더 아래의 모든 .pdf 파일 무시(doc/server/1.pdf 무시)
 doc/**/*.pdf
+
+파일 무시하기 : .gitignore
+  추적하지 않을 파일들에 대해서 기록
+  처음에 하는 것이 좋음
